<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewEnglish"
            style="@style/TextViewLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_english"
            app:layout_constraintBottom_toTopOf="@+id/textViewArabic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewArabic"
            style="@style/TextViewLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_arabic"
            app:layout_constraintBottom_toTopOf="@+id/view10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewEnglish" />

        <View
            android:id="@+id/view10"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toTopOf="@+id/textViewCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewArabic" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewCancel"
            style="@style/TextViewLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view10" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>